force-app/src/objects/CTCM__Statement__c.object
<CustomObject>
    <fields>
        <fullName>CTCM__Account_Name__c</fullName>
        <label>Account Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__BankAccountIdentifier__c</fullName>
        <label>Bank Account Identifier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__Closing_Balance__c</fullName>
        <label>Closing Balance</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTCM__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CTCM__ElectronicSequenceNumber__c</fullName>
        <description>&lt;ElctrncSeqNb&gt;</description>
        <label>ElectronicSequenceNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTCM__IBAN_Number__c</fullName>
        <label>IBAN Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__NewStatementID__c</fullName>
        <externalId>true</externalId>
        <label>NewStatementID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__Opening_Balance__c</fullName>
        <label>Opening Balance</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTCM__StatementID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>StatementID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CTCM__Statement_Source__c</fullName>
        <label>Statement Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CAMT53</fullName>
                </value>
                <value>
                    <fullName>MT940</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Statement</label>
    <listViews>
        <fullName>CTCM__All</fullName>
        <columns>NAME</columns>
        <columns>CTCM__Account_Name__c</columns>
        <columns>CTCM__Opening_Balance__c</columns>
        <columns>CTCM__Closing_Balance__c</columns>
        <columns>CTCM__Date__c</columns>
        <columns>CTCM__ElectronicSequenceNumber__c</columns>
        <columns>CTCM__IBAN_Number__c</columns>
        <columns>CTCM__StatementID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ST-{0000000}</displayFormat>
        <label>Statement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Statements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>